selfhost/test/typechecker/funcdecl/error_type_mismatch_param_default_value.3.out
Error at %FILE_NAME%:1:25
Type mismatch
  |  func foo(a: Int = Option.None_) {}
                             ^
Expected: Int
but instead found: <unknown>?
