selfhost/test/typechecker/funcdecl/error_type_mismatch_param_default_value.3.abra
func foo(a: Int = Option.None_) {}